@@ -2,189 +2,187 @@
 <interface>
 <requires lib="gtk+" version="3.18"/>
 <object class="GtkBox" id="mirrors">
-  <property name="visible">True</property>
-  <property name="can_focus">False</property>
-  <!--<property name="halign">fill</property>-->
-  <property name="halign">center</property>
-  <property name="margin_bottom">10</property>
-  <property name="margin_top">0</property>
-  <property name="margin_start">10</property>
-  <property name="margin_end">10</property>
-  <!--<property name="hexpand">True</property>-->
-  <property name="orientation">vertical</property>
-  <child>
-    <object class="GtkLabel" id="introduction">
-      <property name="visible">True</property>
-      <property name="can_focus">False</property>
-      <property name="margin_top">10</property>
-      <property name="margin_bottom">8</property>
-      <property name="halign">center</property>
-      <property name="valign">start</property>
-      <property name="label" translatable="yes"></property>
-      <property name="use_markup">True</property>
-      <property name="justify">fill</property>
-    </object>
-    <packing>
-      <property name="expand">False</property>
-      <property name="fill">False</property>
-      <property name="position">0</property>
-    </packing>
-  </child>
-  <child>
-    <object class="GtkBox" id="rank_box">
-      <property name="hexpand">True</property>
-      <property name="orientation">horizontal</property>
-      <property name="margin_top">10</property>
-      <child>
-        <object class="GtkRadioButton" id="rank_radiobutton">
-          <property name="label" translatable="yes"></property>
-          <property name="visible">True</property>
-          <property name="can_focus">True</property>
-          <property name="receives_default">False</property>
-          <property name="halign">start</property>
-          <property name="always_show_image">True</property>
-          <property name="active">True</property>
-          <property name="draw_indicator">True</property>-->
-          <signal name="toggled" handler="on_rank_radiobutton_toggled" swapped="no"/>
-        </object>
-        <packing>
-          <property name="expand">False</property>
-          <property name="fill">True</property>
-          <property name="position">1</property>
-        </packing>
-      </child>
-    </object>
-    <packing>
-      <property name="expand">False</property>
-      <property name="fill">True</property>
-      <property name="position">1</property>
-    </packing>
-  </child>
-  <!-- end of rank mirrors -->
-  <!-- Leave mirror list as it is -->
-  <child>
-    <object class="GtkBox" id="leave_box">
-      <property name="hexpand">True</property>
-      <property name="orientation">horizontal</property>
-      <property name="margin_top">10</property>
-      <child>
-        <object class="GtkRadioButton" id="leave_radiobutton">
-          <property name="label" translatable="yes"></property>
-          <property name="visible">True</property>
-          <property name="can_focus">True</property>
-          <property name="receives_default">False</property>
-          <property name="halign">start</property>
-          <property name="always_show_image">True</property>
-          <property name="active">True</property>
-          <property name="draw_indicator">True</property>
-          <property name="group">rank_radiobutton</property>
-          <signal name="toggled" handler="on_leave_radiobutton_toggled" swapped="no"/>
-        </object>
-        <packing>
-          <property name="expand">False</property>
-          <property name="fill">True</property>
-          <property name="position">1</property>
-        </packing>
-      </child>
-    </object>
-    <packing>
-      <property name="expand">False</property>
-      <property name="fill">True</property>
-      <property name="position">2</property>
-    </packing>
-  </child>
-  <!-- end of leave mirror list as it is -->
-  <!-- Let user select mirrors -->
-  <child>
-    <object class="GtkBox" id="user_box">
-      <property name="hexpand">True</property>
-      <property name="orientation">horizontal</property>
-      <property name="margin_top">10</property>
-      <child>
-        <object class="GtkRadioButton" id="user_radiobutton">
-          <property name="label" translatable="yes"></property>
-          <property name="visible">True</property>
-          <property name="can_focus">True</property>
-          <property name="receives_default">False</property>
-          <property name="halign">start</property>
-          <property name="always_show_image">True</property>
-          <property name="active">True</property>
-          <property name="draw_indicator">True</property>
-          <property name="group">rank_radiobutton</property>
-          <signal name="toggled" handler="on_user_radiobutton_toggled" swapped="no"/>
-        </object>
-        <packing>
-          <property name="expand">False</property>
-          <property name="fill">True</property>
-          <property name="position">1</property>
-        </packing>
-      </child>
-    </object>
-    <packing>
-      <property name="expand">False</property>
-      <property name="fill">True</property>
-      <property name="position">3</property>
-    </packing>
-  </child>
-  <!-- mirror list listbox -->
-  <child>
-      <object class="GtkBox" id="listboxes_box">
-        <property name="hexpand">True</property>
-        <property name="orientation">horizontal</property>
-        <property name="margin_top">10</property>
-        <child>
-            <object class="GtkScrolledWindow" id="scrolledwindow1">
+    <property name="visible">True</property>
+    <property name="can_focus">False</property>
+    <property name="halign">center</property>
+    <property name="margin_bottom">10</property>
+    <property name="margin_top">0</property>
+    <property name="margin_start">10</property>
+    <property name="margin_end">10</property>
+    <property name="orientation">vertical</property>
+    <child>
+        <object class="GtkLabel" id="introduction">
             <property name="visible">True</property>
-            <property name="can_focus">True</property>
-            <property name="hexpand">True</property>
-            <property name="vexpand">True</property>
-            <property name="hscrollbar_policy">never</property>
-            <property name="shadow_type">in</property>
-            <property name="margin_right">5</property>
-                <!--<child>
-                    <object class="GtkListBox" id="arch_mirrors_listbox">
-                        <property name="visible">True</property>
-                        <property name="can_focus">True</property>
-                    </object>
-                </child>-->
-            </object>
-            <packing>
-                <property name="expand">True</property>
-                <property name="fill">True</property>
-                <property name="position">0</property>
-            </packing>
-      </child>
-
-      <child>
-        <object class="GtkScrolledWindow" id="scrolledwindow2">
-          <property name="visible">True</property>
-          <property name="can_focus">True</property>
-          <property name="hexpand">True</property>
-          <property name="vexpand">True</property>
-          <property name="hscrollbar_policy">never</property>
-          <property name="shadow_type">in</property>
-          <property name="margin_left">5</property>
-          <!--<child>
-            <object class="GtkListBox" id="antergos_mirrors_listbox">
-              <property name="visible">True</property>
-              <property name="can_focus">True</property>
-            </object>
-          </child>-->
+            <property name="can_focus">False</property>
+            <property name="margin_top">10</property>
+            <property name="margin_bottom">8</property>
+            <property name="halign">center</property>
+            <property name="valign">start</property>
+            <property name="label" translatable="yes"></property>
+            <property name="use_markup">True</property>
+            <property name="justify">fill</property>
         </object>
         <packing>
-          <property name="expand">True</property>
-          <property name="fill">True</property>
-          <property name="position">1</property>
+            <property name="expand">False</property>
+            <property name="fill">False</property>
+            <property name="position">0</property>
         </packing>
-      </child>
-    </object>
-    <packing>
-      <property name="expand">True</property>
-      <property name="fill">True</property>
-      <property name="position">4</property>
-    </packing>
-</child>
-
-
+    </child>
+    <child>
+        <object class="GtkBox" id="rank_box">
+            <property name="hexpand">True</property>
+            <property name="orientation">horizontal</property>
+            <property name="margin_top">10</property>
+            <property name="margin_left">190</property>
+            <child>
+                <object class="GtkRadioButton" id="rank_radiobutton">
+                    <property name="label" translatable="yes"></property>
+                    <property name="visible">True</property>
+                    <property name="can_focus">True</property>
+                    <property name="receives_default">False</property>
+                    <property name="halign">start</property>
+                    <property name="always_show_image">True</property>
+                    <property name="active">True</property>
+                    <property name="draw_indicator">True</property>-->
+                    <signal name="toggled" handler="on_rank_radiobutton_toggled" swapped="no"/>
+                </object>
+                <packing>
+                    <property name="expand">False</property>
+                    <property name="fill">True</property>
+                    <property name="position">1</property>
+                </packing>
+            </child>
+        </object>
+        <packing>
+            <property name="expand">False</property>
+            <property name="fill">True</property>
+            <property name="position">1</property>
+        </packing>
+    </child>
+    <!-- end of rank mirrors -->
+    <!-- Leave mirror list as it is -->
+    <child>
+        <object class="GtkBox" id="leave_box">
+            <property name="hexpand">True</property>
+            <property name="orientation">horizontal</property>
+            <property name="margin_top">10</property>
+            <property name="margin_left">190</property>
+            <child>
+                <object class="GtkRadioButton" id="leave_radiobutton">
+                    <property name="label" translatable="yes"></property>
+                    <property name="visible">True</property>
+                    <property name="can_focus">True</property>
+                    <property name="receives_default">False</property>
+                    <property name="halign">start</property>
+                    <property name="always_show_image">True</property>
+                    <property name="active">True</property>
+                    <property name="draw_indicator">True</property>
+                    <property name="group">rank_radiobutton</property>
+                    <signal name="toggled" handler="on_leave_radiobutton_toggled" swapped="no"/>
+                </object>
+                <packing>
+                    <property name="expand">False</property>
+                    <property name="fill">True</property>
+                    <property name="position">1</property>
+                </packing>
+            </child>
+        </object>
+        <packing>
+            <property name="expand">False</property>
+            <property name="fill">True</property>
+            <property name="position">2</property>
+        </packing>
+    </child>
+    <!-- end of leave mirror list as it is -->
+    <!-- Let user select mirrors -->
+    <child>
+        <object class="GtkBox" id="user_box">
+            <property name="hexpand">True</property>
+            <property name="orientation">horizontal</property>
+            <property name="margin_top">10</property>
+            <property name="margin_left">190</property>
+            <child>
+                <object class="GtkRadioButton" id="user_radiobutton">
+                    <property name="label" translatable="yes"></property>
+                    <property name="visible">True</property>
+                    <property name="can_focus">True</property>
+                    <property name="receives_default">False</property>
+                    <property name="halign">start</property>
+                    <property name="always_show_image">True</property>
+                    <property name="active">True</property>
+                    <property name="draw_indicator">True</property>
+                    <property name="group">rank_radiobutton</property>
+                    <signal name="toggled" handler="on_user_radiobutton_toggled" swapped="no"/>
+                </object>
+                <packing>
+                    <property name="expand">False</property>
+                    <property name="fill">True</property>
+                    <property name="position">1</property>
+                </packing>
+            </child>
+        </object>
+        <packing>
+            <property name="expand">False</property>
+            <property name="fill">True</property>
+            <property name="position">3</property>
+        </packing>
+    </child>
+    <!-- mirror list listboxes -->
+    <child>
+        <object class="GtkBox" id="listboxes_box">
+            <property name="hexpand">True</property>
+            <property name="orientation">horizontal</property>
+            <property name="margin_top">10</property>
+            <child>
+                <object class="GtkScrolledWindow" id="scrolledwindow1">
+                    <property name="visible">True</property>
+                    <property name="can_focus">True</property>
+                    <property name="hexpand">True</property>
+                    <property name="vexpand">True</property>
+                    <property name="hscrollbar_policy">never</property>
+                    <property name="shadow_type">in</property>
+                    <property name="margin_right">5</property>
+                    <!--<child>
+                    <object class="GtkListBox" id="arch_mirrors_listbox">
+                    <property name="visible">True</property>
+                    <property name="can_focus">True</property>
+                    </object>
+                    </child>-->
+                </object>
+                <packing>
+                    <property name="expand">True</property>
+                    <property name="fill">True</property>
+                    <property name="position">0</property>
+                </packing>
+            </child>
+            <child>
+                <object class="GtkScrolledWindow" id="scrolledwindow2">
+                    <property name="visible">True</property>
+                    <property name="can_focus">True</property>
+                    <property name="hexpand">True</property>
+                    <property name="vexpand">True</property>
+                    <property name="hscrollbar_policy">never</property>
+                    <property name="shadow_type">in</property>
+                    <property name="margin_left">5</property>
+                    <!--<child>
+                    <object class="GtkListBox" id="antergos_mirrors_listbox">
+                    <property name="visible">True</property>
+                    <property name="can_focus">True</property>
+                    </object>
+                    </child>-->
+                </object>
+                <packing>
+                    <property name="expand">True</property>
+                    <property name="fill">True</property>
+                    <property name="position">1</property>
+                </packing>
+            </child>
+        </object>
+        <packing>
+            <property name="expand">True</property>
+            <property name="fill">True</property>
+            <property name="position">4</property>
+        </packing>
+    </child>
 </object>
 </interface>
